--- a/mobile/css/contents.css
+++ b/mobile/css/contents.css
@@ -15,7 +15,7 @@
 
 
 /* raido 초기화 */
-.allcare .radio_group input[type="radio"] {width: 16px; height: 16px; appearance: auto;}
+.allcare .radio_group input[type="radio"] {width: 18px; height: 18px; appearance: auto;}
 .allcare .radio_group input[type="radio"] + label {margin: 0 0 0 0.25rem;}
 .allcare input[type='radio'] {margin: 0; border: initial;}
 .allcare .radio_group input[type="radio"]::before,
@@ -34,8 +34,7 @@
 .allcare * {letter-spacing: -0.02em;}
 .allcare .btn.type01.fill {background-color: var(--col_blue); color: #fff; font-weight: 600;}
 .allcare .btn.semilarge {height: 40px; line-height: 40px;}
-.allcare .btn.type03 {border: 1px solid #757575; font-weight: 600;}
-.allcare .btn.type03.fw400 {font-weight: 400;}
+.allcare .btn.type03 {border: 1px solid #757575; font-weight: 400;}
 .allcare .sr_only {position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0 0 0 0); white-space: nowrap; border: 0; font-size: 0;}
 .allcare .req_mark {position: relative; display: inline-block;}
 .allcare .req_mark:after {content: ''; position: absolute; right: -14px; top: 40%; transform: translateY(-50%); background-color: #ee2e62; border-radius: 50%; width: 6px; height: 6px;}
@@ -244,7 +243,7 @@
 .mypage .progmg.allcare .pa_page_wrap .board_list ul .board_li .board_list_row {display: flex; gap: 12px;}
 .mypage .progmg.allcare .pa_page_wrap .board_list ul .board_li .board_list_row + .board_list_row {margin-top: 4px;}
 .mypage .progmg.allcare .pa_page_wrap .board_list ul .board_li .board_list_row .dt {width: 100px; font-size: 14px; font-weight: 400; line-height: 24px; color: #555;}
-.mypage .progmg.allcare .pa_page_wrap .board_list ul .board_li .board_list_row .dd {width: calc(100% - 100px); font-size: 14px; font-weight: 400; line-height: 24px; color: #333;}
+.mypage .progmg.allcare .pa_page_wrap .board_list ul .board_li .board_list_row .dd {flex: 1; width: calc(100% - 100px); font-size: 14px; font-weight: 400; line-height: 24px; color: #333;}
 .mypage .progmg.allcare .join_request_list .board_li dl {display: flex; flex-wrap: wrap; gap: 4px 12px;}
 .mypage .progmg.allcare .join_request_list .board_li dl dt {width: 100px; font-size: 14px; font-weight: 400; line-height: 24px; color: #555;}
 .mypage .progmg.allcare .join_request_list .board_li dl dd {width: calc(100% - 112px); font-size: 14px; font-weight: 400; line-height: 24px; color: #333;}
@@ -254,8 +253,8 @@
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap {position: relative; padding-bottom: 32px;}
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap::after {content: ''; position: absolute; bottom: 0; left: 50%; transform: translateX(-50%); width: calc(100% + 2.5rem); height: 8px; background-color: #f3f5f6;}
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap.top_linewrap {margin-top: 8px;}
-.mypage .progmg.allcare .my_ptcp_from .box_table_wrap.top_linewrap dt {border-top: 1px solid #eee; padding-top: 16px;} 
-.mypage .progmg.allcare .my_ptcp_from .box_table_wrap.top_linewrap dt:first-child {border-top: none; padding-top: 0;}
+.mypage .progmg.allcare .my_ptcp_from .box_table_wrap.top_linewrap dd {border-bottom: 1px solid #eee; padding-bottom: 16px;} 
+.mypage .progmg.allcare .my_ptcp_from .box_table_wrap.top_linewrap dd:last-child {border-bottom: none; padding-bottom: 0;}
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap.top_linewrap >div + div {border-top: 1px solid #eee;}
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap .dt,
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap .dt .req_mark {font-size: 14px; color: #555; font-weight: 600; line-height: 24px;}
@@ -289,8 +288,8 @@
 .mypage .progmg.allcare .my_ptcp_from .agm_area .agm_box {margin-top: 8px; margin-bottom: 4px;}
 .mypage .progmg.allcare .my_ptcp_from .agm_area .agm_desc {margin-top: 8px;}
 .mypage .progmg.allcare .my_ptcp_from .agm_area .agm_desc strong {font-size: 14px; font-weight: 400; line-height: 24px; color: #e0024b;}
-.mypage .progmg.allcare .my_ptcp_from .agm_area .btn_view_doc {margin-left: 4px; display: inline; width: 64px; height: 32px; border: 1px solid #757575; border-radius: 4px;} 
-.mypage .progmg.allcare .my_ptcp_from .agm_area .btn_view_doc span {vertical-align: baseline; font-size: 14px; line-height: 1; color: #333; font-weight: 600;} 
+.mypage .progmg.allcare .my_ptcp_from .agm_area .btn_view_doc {margin-left: 4px; display: inline-flex; justify-content: center; align-items: center; width: 64px; height: 32px; border: 1px solid #757575; border-radius: 4px;} 
+.mypage .progmg.allcare .my_ptcp_from .agm_area .btn_view_doc span {vertical-align: baseline; font-size: 14px; line-height: 1; color: #333; font-weight: 400;} 
 .mypage .progmg.allcare .my_ptcp_from .agm_cho .radio_filed.radiof_type2 {margin-top: 12px; gap: 16px; height: 24px; align-items: flex-end;}
 .mypage .progmg.allcare .my_ptcp_from .box_agm_wrap {position: relative; padding-bottom: 38px;}
 .mypage .progmg.allcare .my_ptcp_from .box_agm_wrap::after { content: ''; position: absolute; bottom: 0; left: 50%; transform: translateX(-50%); width: calc(100% + 2.5rem); height: 8px; background-color: #f3f5f6;}
@@ -308,6 +307,7 @@
 /* [팝업] 운영 대학 검색 팝업 (UI_ADHPAbP06) */
 .mypage .progmg.allcare .newpop_uni_search .list_cont_area {padding: 0 20px 148px;}
 .mypage .progmg.allcare .newpop_uni_search .list_cont_area .board_header .select_area .flex_box button {border: none; padding: 0 0 0 1.5rem;}
+.mypage .progmg.allcare .newpop_uni_search .list_cont_area .board_list .radio_group ul {width: 100%;}
 .mypage .progmg.allcare .newpop_uni_search .list_cont_area .board_list .radio_group ul li {padding: 16px 0; border-bottom: 1px solid #ddd;}
 .mypage .progmg.allcare .newpop_uni_search .list_cont_area .board_list .radio_group ul li .radio_list_uni {display: flex; gap: 8px;  align-items: center;}
 .mypage .progmg.allcare .newpop_uni_search .list_cont_area .board_list .radio_group ul li .radio_list_uni label P {font-size: 18px; color: #111; font-weight: 600; line-height: 28px;}
@@ -1115,3 +1115,10 @@
 .mypage .progmg.allcare .allowance_info_box .allowance_info_twin .dd {width: 100%;}
 .mypage .progmg.allcare .hd_btn_box .btn_all {border: 1px solid #757575; border-radius: 4px; padding: 4px 8px;}
 .mypage .progmg.allcare .hd_btn_box .btn_all span {font-size: 14px; color: #333; font-weight: 400; line-height: 24px;}
+
+
+/* UI_ADHPCaM01 */
+.stuJobSvc_ban { position: relative; padding: 1.25rem 1rem; border-radius: 8px; background: var(--col_bg);}
+.stuJobSvc_ban .btn_wrap { display: inline-block;}
+.stuJobSvc_ban .btn { display: flex; align-items: center; padding: 0.375rem 1rem;}
+.stuJobSvc_ban::after { position: absolute; bottom: 1.25rem; right: 1rem; width: 5rem; height: 5rem; background: url("../images/mypage/ico_search1_3.png"); background-size: cover; content: "";}
