--- a/mobile/css/contents.css
+++ b/mobile/css/contents.css
@@ -1122,3 +1122,16 @@
 .stuJobSvc_ban .btn_wrap { display: inline-block;}
 .stuJobSvc_ban .btn { display: flex; align-items: center; padding: .375rem 1rem;}
 .stuJobSvc_ban::after { position: absolute; bottom: 1.25rem; right: 1rem; width: 5rem; height: 5rem; background: url("../images/mypage/ico_search1_3.png"); background-size: cover; content: "";}
+
+
+
+/* 개인정보 수집·이용·제공에 대한 동의서(참여자용) (UI_ADHPCbP11.html) */
+.newpop_inner.newpop_pcfp {padding: 1rem 1.25rem 0; margin-bottom: 6.25rem;}
+.newpop_inner.newpop_pcfp .pcfp_li+.pcfp_li {margin-top: 1.5rem;} 
+.newpop_inner.newpop_pcfp .pcfp_li .pcfp_inner {display: flex; gap: .25rem; }
+.newpop_inner.newpop_pcfp .pcfp_li .pcfp_inner .pcfp_num {width: 1.5rem; font-size: 1rem; color: #111; font-weight: 600; line-height: 1.5rem; vertical-align: baseline;}
+.newpop_inner.newpop_pcfp .pcfp_li .pcfp_inner .pcfp_desc {flex: 1; font-size: 1rem; color: #333; font-weight: 400; line-height: 1.5rem;}
+.newpop_inner.newpop_pcfp .pcfp_li .pcfp_inner_ul {margin-top: .75rem; padding: 1rem .75rem; background-color: #f8f8f8; border-radius: .25rem;}
+.newpop_inner.newpop_pcfp .pcfp_li .pcfp_inner_ul li {padding-left: 1rem; position: relative; font-size: 1rem; color: #333; font-weight: 400; line-height: 1.75rem;}
+.newpop_inner.newpop_pcfp .pcfp_li .pcfp_inner_ul li::before {content: ''; position: absolute; left: .25rem; top: .6875rem; background-color: #333; width: .25rem; height: .25rem; border-radius: 50%;} 
+.newpop_inner.newpop_pcfp .btn_wrap {width: 100%; padding: 1.5rem 1.25rem; position: fixed; bottom: 0; left: 50%; transform: translateX(-50%); background-color: #fff;}
